Fix news date wrapping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -31,6 +31,7 @@ table {
 
   th {
     font-weight: bold;
+    white-space: nowrap;
   }
 }
 
